# add-sql-to-excel-project

./: .gitignore  README.md  pyproject.toml
app/: main.py  models.py
app/config/: settings.py
app/utils/: excel_writer.py  logger.py  sql_parser.py
tests/: test_excel_writer.py  test_logger.py  test_main.py  test_sql_parser.py
